Fix #258 and updates to accommodate #461 updates to the part 01 step 09 to save the ComponentIdentification for comparison in part 02 step 07.